@@ -1,6 +1,8 @@
 0.7.10
  - enh: improve spacing in GUI design (#44)
  - fix: download in "My Data" tab did not work (#42)
+ - ref: remove old code that cleared old cache and
+   get rid of the appdirs dependency
 0.7.9
  - fix: skip passing emtpy-valued API-Key (#41)
  - enh: added logging capabilities (#18)
